# bevy_snake

./: .gitignore  Cargo.toml  capture.cap  prepare_for_renderdoc.sh
assets/models/: head_01.glb  head_02.glb  head_03.glb  head_04.glb  head_05.glb  head_06.glb  head_07.glb  head_08.glb  main_body.glb  snake.gltf  snake_2.gltf  snake_body.gltf  snake_head.gltf  snake_head_me.gltf  whole_snake.gltf
assets/shaders/: field_material.wgsl  highlight_material_extension.wgsl  snake.wgsl  snake_compute.wgsl  tiled_material_extension.wgsl
src/: main.rs  player.rs  states.rs  system_sets.rs
src/asset_loader/: mod.rs  resources.rs  systems.rs
src/common_types/: mod.rs
src/field/: components.rs  mod.rs  resources.rs  systems.rs
src/field_plugin/: field.rs  material.rs  mod.rs
src/food_plugin/: display_food.rs  mod.rs
src/input/: components.rs  mod.rs  resources.rs  systems.rs
src/player/: components.rs  events.rs  helpers.rs  mod.rs  resources.rs  systems.rs
src/player_plugin/: input_plugin.rs  mod.rs  position.rs  snake_sprite.rs  sprites.rs
src/plugins/: highlight_material_extension.rs  mod.rs  tiled_material_extension.rs
src/scene/: mod.rs  systems.rs
src/snake/: components.rs  gpu_systems.rs  mod.rs  node.rs  render_asset.rs  resources.rs  systems.rs
src/snake_mesh/: components.rs  draw_command.rs  gpu_systems.rs  mod.rs  node.rs  phase_item.rs  pipeline.rs  pipelines.rs  resources.rs
