[package]
name = "bevy_snake"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { path = "/home/arcashka/Documents/projects/other/bevy", version = "0.12", features = [
    "jpeg",
    "file_watcher",
] }
rand = "0.8.5"
radsort = "0.1"
bytemuck = "1.14"

[lints.clippy]
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
