[package]
name = "bevy_snake"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
bevy = { path = "/home/arcashka/Documents/projects/other/bevy", features = [
    "jpeg",
    "file_watcher",
] }
bevy-inspector-egui = { path = "/home/arcashka/Documents/projects/other/bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_flycam = { path = "/home/arcashka/Documents/projects/other/bevy_flycam" }
rand = "0.8.5"
radsort = "0.1"
bytemuck = "1.14"

[lints.clippy]
type_complexity = "allow"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
